# scoop-demo-server

./: .dockerignore  Cargo.toml  Dockerfile  README.md
dev-html/: index.html
front/: .eslintcache  .gitignore  package-lock.json  package.json  tailwind.config.js
front/public/: index.html
front/src/: App.js  Loading.js  Search.js  Topic.js  index.css  index.html  manifest.json
scoop-demo-server/: Cargo.toml
src/: config.rs  error.rs  main.rs  metrics.rs  output.rs
